Better support for typed properties